# CIS-2450-Final-Project

./: .env.example  .gitignore  MediaTasteApp.jsx  README.md  dashboard.py  eda.ipynb  homework-2-notebook.ipynb  modeling.ipynb  preprocessing.ipynb  pyproject.toml
assets/: styles.css
backend/: .env.example  app.py  config.py  models.py
backend/api/: books.py  itunes.py  modeling.py  normalization.py  spotify.py  taste.py
data/: data_loader.py  llm_extraction.py  soc-Epinions1.txt  song_mapping.csv  user_features.csv  users.csv
frontend/: package-lock.json
frontend/src/: App.jsx
modals/: __init__.py  modal_config.py  modal_helpers.py  modal_loader.py
modals/components/: __init__.py  billboard_modal.py  friend_artists_modal.py  friends_popular_songs_modal.py  friends_top_genres_modal.py  genre_artist_modal.py  genre_overlap_modal.py  itunes_comparison_modal.py  recommendations_modal.py  songs_modal.py  top_songs_per_genre_modal.py  user_favorites_modal.py  users_modal.py
reference/: __init__.py  transformations_hw1.py
transformations/: transformations_stub.py
